# automation-agents

./: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
api/core/: config.py
api/core/dependencies/: api_key_usage.py  llm.py
api/utils/: address_to_coordinates.py  api_key_randomizer.py  commute_calculator.py  keywordextractor.py  universal_converter.py
api/v1/routes/: __init__.py  auth.py  backend_builder.py  currency_converter.py  data_cleaning.py  doc_splitter.py  doc_splitter_2.py  dynamic_scrapper.py  email_reading_tools.py  excel_translator.py  lead_enrichment.py  lead_identifier.py  location_components.py  rag_system.py  sales_outreach.py  screening_analyst.py  summarizer.py  table_question_answering.py  tagging_agent.py
api/v1/schemas/: base64_schemas.py  response_model.py  table_question_answering.py
api/v1/services/table_question_answering/: documents.py  huggingface.py
